--- a/module-admin/src/main/resources/templates/example.html
+++ b/module-admin/src/main/resources/templates/example.html
@@ -255,27 +255,7 @@
                             <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"
                                    for="answerContents"><strong>답변 내용</strong></label>
                             <div class="col-sm-12">
-                                <textarea rows="5" cols="5" class="form-control" id="answerContents" name="answerContents"></textarea>
-                            </div>
-                        </div>
-                        <div class="mb-3 form-group row">
-                            <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>담당자 지정</strong></div>
-                            <div class="col-sm-12 btn-group-sm">
-                                <button type="button" class="btn btn-inverse" data-bs-toggle="modal" data-bs-target="#managerSearchPopup">담당자 검색</button>
-                            </div>
-                            <div class="m-0 row">
-                                <div class="col-12 row border rounded p-t-10 p-b-10 m-0 mt-2">
-                                    <div class="col-auto">
-                                        <span class="label label-inverse">
-                                            Label Badge <a href="javascript:void(0)" class="text-white">X</a>
-                                        </span>
-                                        <span class="label label-inverse">
-                                            Label Badge <a href="javascript:void(0)" class="text-white">X</a>
-                                        </span><span class="label label-inverse">
-                                            Label Badge <a href="javascript:void(0)" class="text-white">X</a>
-                                        </span>
-                                    </div>
-                                </div>
+                                <textarea rows="5" cols="5" class="form-control" id="answerContents" name="answerContents" placeholder="Text Input Validation"></textarea>
                             </div>
                         </div>
                         <div class="mb-3 row">
@@ -310,12 +290,12 @@
                                             <div id="atchFileUploadSuccess">
 
 
-                                            <span class="label label-inverse" id="42008"> 슬랙 (1).png
+                                            <span class="label label-yellow" id="42008"> 슬랙 (1).png
                                                 <a class="text-yellow" href="javascript:void(0)" name="42008" onclick="deleteFile(this.name, this.dataset.idntfcKey)" data-idntfc-key="155254744532866413812830686042667176820">X
                                                 </a>
                                             </span>
 
-                                                <span class="label label-inverse" id="42027"> 환경·경제 통합분석을 위한 환경가치 종합연구_통합분석 시스템 구축.pdf
+                                                <span class="label label-yellow" id="42027"> 환경·경제 통합분석을 위한 환경가치 종합연구_통합분석 시스템 구축.pdf
                                                 <a class="text-yellow" href="javascript:void(0)" name="42027" onclick="deleteFile(this.name, this.dataset.idntfcKey)" data-idntfc-key="187729746533770933651671500955560289682">X
                                                 </a>
                                             </span>
@@ -362,11 +342,11 @@
                             <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>분류</strong></div>
                             <div class="border-checkbox-section">
                                 <div class="border-checkbox-group">
-                                    <input type="checkbox" class="border-checkbox " id="clsfCds1" name="clsfCds" value="228101" data-cd-name="공기" checked="">
+                                    <input type="checkbox" class="border-checkbox " id="clsfCds1" name="clsfCds" value="228101" data-cd-name="공기">
                                     <label class="form-label border-checkbox-label" for="clsfCds1">공기</label>
                                 </div>
                                 <div class="border-checkbox-group">
-                                    <input type="checkbox" class="border-checkbox " id="clsfCds2" name="clsfCds" value="228102" data-cd-name="기후변화" checked="">
+                                    <input type="checkbox" class="border-checkbox " id="clsfCds2" name="clsfCds" value="228102" data-cd-name="기후변화">
                                     <label class="form-label border-checkbox-label" for="clsfCds2">기후변화</label>
                                 </div>
                                 <div class="border-checkbox-group">
