--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -18,8 +18,10 @@
         <meta name="author" content="#">
         <!-- Favicon icon -->
         <link rel="icon" th:href="@{/files/assets/images/favicon.ico}" type="image/x-icon">
-        <!-- Google font-->
+        <!-- Google font -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
+        <!-- pretendard font -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
         <!-- Required Fremwork -->
         <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/bootstrap/dist/css/bootstrap.min.css}">
         <!-- themify-icons line icon -->
