--- a/module-admin/src/main/resources/static/files/assets/scss/partials/_variables.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/_variables.scss
@@ -2,7 +2,7 @@
 $theme-bg-color: #f3f3f3;
 $theme-font-size:0.875em;
 $theme-font-color: #666;
-$theme-font-family:"Open Sans",sans-serif;
+$theme-font-family: "pretendard", "Open Sans",sans-serif;
 // Theme colors variables
 $primary-color:#ff8031;
 $warning-color:#fe9365;
