--- a/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
@@ -346,7 +346,7 @@ $dark-layout-color: #171a19;
                 @extend .nav-left;
 
                 li {
-                    padding: 10px 20px;
+                    padding: 14px 20px 10px 20px;
                 }
 
                 .user-profile {
