--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -26,7 +26,9 @@ textarea {
     margin:1px 5px 1px 0;
     display:inline-block;
     font-size:14px;
+    text-transform: none;
 }
+
 
 strong {
     font-weight:600;
