--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -35,10 +35,6 @@
         <!-- feather Awesome -->
         <link rel="stylesheet" type="text/css" th:href="@{/files/assets/icon/feather/css/feather.css}">
 
-        <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/datatables.net-bs4/css/dataTables.bootstrap4.min.css}">
-        <link rel="stylesheet" type="text/css" th:href="@{/files/assets/pages/data-table/css/buttons.dataTables.min.css}">
-        <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css}">
-
         <!-- Select 2 css -->
         <link rel="stylesheet" th:href="@{/files/bower_components/select2/dist/css/select2.min.css}"/>
         <!-- Multi Select css -->
@@ -53,6 +49,7 @@
 
         <!-- 관리자 임의 추가 css -->
         <link rel="stylesheet" type="text/css" th:href="@{/css/admin.common.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/datatables.css}">
         <script type="text/javascript" src="/files/bower_components/jquery/dist/jquery.min.js"></script>
 
     </head>
