--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -94,9 +94,11 @@
 </body>
 
 <!-- Required Jquery -->
+
 <script type="text/javascript" th:src="@{/files/bower_components/jquery-ui/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/popper.js/dist/umd/popper.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/bootstrap/dist/js/bootstrap.min.js}"></script>
+
 <!-- jquery slimscroll js -->
 <script type="text/javascript" th:src="@{/files/bower_components/jquery-slimscroll/jquery.slimscroll.js}"></script>
 <!-- modernizr js -->
@@ -123,8 +125,7 @@
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/select2-custom.js}"></script>
 <script type="text/javascript" th:src="@{/js/switches.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery-validation-1.19.5/dist/jquery.validate.js}"></script>
-<script type="text/javascript" th:src="@{/js/jquery.serializeObject.js}"></script>
-<script type="text/javascript" th:src="@{/js/adminCommon.js}"></script>
+<script type="text/javascript" th:src="@{/js/dataTables.select.min.js}"></script>
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
